--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Web</title>
+  <meta charset="utf-8">
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
 <script src="index.js"></script>
+</html>
